Shang New Live/src/objects/Rent_Roll__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Invoice_Date__c</fullName>
        <description>Actual Invoice Date - This field is populated from &apos;Approve Rent Roll&apos; page after &apos;Approval&apos; and will further be used in Invoice trigger to populate Invoice Date on Invoice creation</description>
        <inlineHelpText>Actual Invoice Date</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Foreign__c</fullName>
        <label>Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Local__c</fullName>
        <label>Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approved By (Operations Manager)</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rent_Roll</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <description>Populated via Generate Rent Roll process</description>
        <inlineHelpText>Populated via Generate Rent Roll process</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-Hoc Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Debit Note</fullName>
                </value>
                <value>
                    <fullName>GTO Rent</fullName>
                </value>
                <value>
                    <fullName>Late Charge</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comm_Tax_Applicable__c</fullName>
        <label>Comm Tax Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ex_Rate_Date__c</fullName>
        <label>Exchange Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Invoice_Date__c</fullName>
        <description>Populated via GenerateRentRoll Page</description>
        <inlineHelpText>This field is populated from &apos;Generate Rent Roll&apos; Page</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Invoice_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoices_Emailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoices Emailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoices_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoices Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoices_Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoices Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notified_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notified_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule.</description>
        <inlineHelpText>This field is populated by W/F rule.</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <formula>Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Rent Roll</relationshipLabel>
        <relationshipName>Rent_Roll</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rent Roll is completely rejected</description>
        <inlineHelpText>Rent Roll is completely rejected</inlineHelpText>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rent_Roll_Auto__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Rent Roll Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Rent_Roll_Date__c</fullName>
        <label>Rent Roll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Roll_Index__c</fullName>
        <label>Rent Roll Index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent_Roll_MM__c</fullName>
        <description>To be generated from Generate RR page. this will be later used for Inv ID creation</description>
        <label>Rent Roll MM</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent_Roll_Period__c</fullName>
        <label>Rent Roll Period</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent_Roll_YYYY__c</fullName>
        <description>To be generated from Generate RR page. this will be later used for Inv ID creation</description>
        <label>Rent Roll YYYY</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Foreign__c</fullName>
        <formula>Amount_Foreign__c + Total_Comm_Tax_Foreign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Formula__c</fullName>
        <formula>Total_Amount__c + Total_Comm_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount + Comm Tax</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <inlineHelpText>Roll-up up from related RRD</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Comm_Tax_Foreign__c</fullName>
        <label>Total Comm Tax (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Comm_Tax_Local__c</fullName>
        <label>Total Comm Tax (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Comm_Tax__c</fullName>
        <inlineHelpText>Roll-up up from related RRD</inlineHelpText>
        <label>Comm Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Diesel_Rate_Foreign__c</fullName>
        <label>Total Diesel Rate (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Diesel_Rate_Local__c</fullName>
        <label>Total Diesel Rate (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Diesel_Rate__c</fullName>
        <description>Total Diesel Rate for the Month.</description>
        <inlineHelpText>Total Diesel Rate for the Month.</inlineHelpText>
        <label>Total Diesel Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Leased_Area_Sq_Ft__c</fullName>
        <label>Total Leased Area (Sq. Ft.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Rent Roll</label>
    <listViews>
        <fullName>All_Rent_Rolls</fullName>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>Property__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Name__c</field>
            <operation>notContain</operation>
            <value>Training</value>
        </filters>
        <label>All Rent Rolls</label>
    </listViews>
    <listViews>
        <fullName>JC_Rent_Rolls</fullName>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>Property__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Rejected__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Actual_Invoice_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Name__c</field>
            <operation>contains</operation>
            <value>Junction City</value>
        </filters>
        <label>JC - Rent Rolls</label>
    </listViews>
    <listViews>
        <fullName>JC_This_Month_Rent_Rolls</fullName>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>Property__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Name__c</field>
            <operation>contains</operation>
            <value>Junction City</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>JC - This Month Rent Rolls</label>
    </listViews>
    <listViews>
        <fullName>JMT_Rent_Rolls</fullName>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>Property__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Name__c</field>
            <operation>contains</operation>
            <value>Junction Maw Tin</value>
        </filters>
        <label>JMT Rent Rolls</label>
    </listViews>
    <listViews>
        <fullName>JMT_This_Month_Rent_Rolls</fullName>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>Property__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Name__c</field>
            <operation>contains</operation>
            <value>Junction Maw Tin</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>JMT - This Month Rent Rolls</label>
    </listViews>
    <listViews>
        <fullName>Rent_Rolls_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Billing_Type__c</columns>
        <columns>Approved__c</columns>
        <columns>Approver__c</columns>
        <columns>Property__c</columns>
        <columns>Rent_Roll_Date__c</columns>
        <columns>Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Property_Name__c</field>
            <operation>notContain</operation>
            <value>Training</value>
        </filters>
        <label>Rent Rolls Created Today</label>
    </listViews>
    <nameField>
        <label>Rent Roll ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rent Roll</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>